# mcp-filesystem

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
mcp_filesystem/: __init__.py
mcp_filesystem/cli/: __init__.py  main.py
mcp_filesystem/mcp/: __init__.py  controller.py  server.py
mcp_filesystem/mcp/core/: __init__.py  entities.py
mcp_filesystem/services/: __init__.py  filesystem_service.py
mcp_filesystem/storage/: filesystem_storage.py  storage.py
mcp_filesystem/utils/: __init__.py  path_validation.py
scripts/: config_paths.py  file_search.py  main.py  mcp_config.py  setup-ai-clients.py
