[tool.poetry]
name = "mcp-filesystem"
version = "0.2.0"
description = "MCP server for filesystem operations - provides secure file system access through Model Context Protocol"
authors = ["Frank Team <team@frank.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mcp_filesystem"}]

[tool.poetry.dependencies]
python = "^3.12"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.5.0"
mcp = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
mcp-filesystem = "mcp_filesystem.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "build", "dist"]
